Fixes width of call-to-action section on mobile; Compiled SASS

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/birthdaymail/ds_campaign.css
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/birthdaymail/ds_campaign.css
@@ -734,93 +734,109 @@ header[role="banner"] {
 @media only screen and (max-width: 600px) {
   /* line 105, sass/_sections.sass */
   #cmp .call-to-action p {
-    margin-left: 2em;
+    width: 96%;
+    line-height: 1.5em;
+    margin: 0.5em auto;
+    float: none;
   }
 }
-/* line 114, sass/_sections.sass */
+/* line 116, sass/_sections.sass */
 #cmp .call-to-action .btn {
   margin: 0 0 0 1em;
   clear: none;
 }
-/* line 118, sass/_sections.sass */
+@media only screen and (max-width: 600px) {
+  /* line 116, sass/_sections.sass */
+  #cmp .call-to-action .btn {
+    margin: 0 auto 0.5em;
+    float: none;
+  }
+}
+/* line 123, sass/_sections.sass */
 #cmp .call-to-action .section-container {
   width: 43em;
 }
-/* line 123, sass/_sections.sass */
+@media only screen and (max-width: 600px) {
+  /* line 123, sass/_sections.sass */
+  #cmp .call-to-action .section-container {
+    width: 100%;
+  }
+}
+/* line 131, sass/_sections.sass */
 #cmp .how-it-works {
   padding: 2em 0;
   border: none !important;
 }
-/* line 127, sass/_sections.sass */
+/* line 135, sass/_sections.sass */
 #cmp .how-it-works .how-it-works-container {
   clear: both;
   overflow: hidden;
   margin: 0 0 1em 0;
 }
-/* line 134, sass/_sections.sass */
+/* line 142, sass/_sections.sass */
 #cmp .action-kit {
   padding-top: 20px;
 }
-/* line 137, sass/_sections.sass */
+/* line 145, sass/_sections.sass */
 #cmp .action-kit img {
   position: relative;
   top: 15px;
   right: 20px;
 }
-/* line 142, sass/_sections.sass */
+/* line 150, sass/_sections.sass */
 #cmp .action-kit .section-container {
   height: 3em;
   background-color: #1eb6e2;
 }
-/* line 146, sass/_sections.sass */
+/* line 154, sass/_sections.sass */
 #cmp .action-kit p {
   color: white;
   font-size: 1.25em;
   padding-top: 8px;
 }
-/* line 151, sass/_sections.sass */
+/* line 159, sass/_sections.sass */
 #cmp .action-kit a {
   color: white !important;
 }
-/* line 157, sass/_sections.sass */
+/* line 165, sass/_sections.sass */
 #cmp .prizing p {
   padding: 1em 1em;
 }
-/* line 160, sass/_sections.sass */
+/* line 168, sass/_sections.sass */
 #cmp .prizing .prizing-container {
   width: 66.66667%;
   margin: 0 auto;
   clear: both;
 }
-/* line 165, sass/_sections.sass */
+/* line 173, sass/_sections.sass */
 #cmp .prizing .btn {
   margin: 0 auto 1em;
 }
-/* line 170, sass/_sections.sass */
+/* line 178, sass/_sections.sass */
 #cmp .locate-shelter {
   width: 90%;
   max-width: 40em;
   margin: 0 auto;
 }
-/* line 175, sass/_sections.sass */
+/* line 183, sass/_sections.sass */
 #cmp .locate-shelter .btn {
   height: 2.3em;
   margin: 1em auto;
 }
 @media only screen and (max-width: 600px) {
-  /* line 175, sass/_sections.sass */
+  /* line 183, sass/_sections.sass */
   #cmp .locate-shelter .btn {
     width: 100%;
   }
 }
-/* line 185, sass/_sections.sass */
+/* line 193, sass/_sections.sass */
 #cmp .content {
   width: 90%;
   max-width: 40em;
   margin: 0 auto;
   /* this padding should be abstracted to all <h3> */
 }
-/* line 189, sass/_sections.sass */
+/* line 197, sass/_sections.sass */
 #cmp .content p {
   display: block;
   text-align: left;
@@ -828,21 +844,21 @@ header[role="banner"] {
   padding-bottom: 1em;
   word-wrap: break-word;
 }
-/* line 195, sass/_sections.sass */
+/* line 203, sass/_sections.sass */
 #cmp .content h2 {
   padding-bottom: 0.5em;
 }
-/* line 199, sass/_sections.sass */
+/* line 207, sass/_sections.sass */
 #cmp .content .headline-callout {
   padding: 0 0 0.5em 0;
   text-transform: capitalize;
   text-align: left;
 }
-/* line 203, sass/_sections.sass */
+/* line 211, sass/_sections.sass */
 #cmp .content .headline-callout span {
   background: #1eb6e2;
 }
-/* line 211, sass/_sections.sass */
+/* line 219, sass/_sections.sass */
 #cmp .gallery img {
   border: 1px solid #dddddd !important;
   -webkit-border-radius: 3px;
@@ -854,52 +870,52 @@ header[role="banner"] {
   -moz-box-shadow: 0 10px 10px -10px #bbbbbb !important;
   box-shadow: 0 10px 10px -10px #bbbbbb !important;
 }
-/* line 216, sass/_sections.sass */
+/* line 224, sass/_sections.sass */
 #cmp .gallery .btn {
   margin: 1.5em auto;
 }
-/* line 222, sass/_sections.sass */
+/* line 230, sass/_sections.sass */
 #cmp .success_msg {
   margin: 0 auto 1em;
 }
-/* line 224, sass/_sections.sass */
+/* line 232, sass/_sections.sass */
 #cmp .success_msg h2 {
   text-transform: uppercase;
   font-weight: 600;
   color: #d5904c;
 }
-/* line 231, sass/_sections.sass */
+/* line 239, sass/_sections.sass */
 #cmp .faq {
   width: 90%;
   max-width: 40em;
   margin: 0 auto;
   height: 42em;
 }
-/* line 237, sass/_sections.sass */
+/* line 245, sass/_sections.sass */
 #cmp .faq h3, #cmp .faq p {
   text-align: left;
   margin-bottom: 0.5em;
 }
-/* line 240, sass/_sections.sass */
+/* line 248, sass/_sections.sass */
 #cmp .faq h3 {
   cursor: pointer;
   color: #1e1d1c;
   font-weight: bold;
 }
-/* line 244, sass/_sections.sass */
+/* line 252, sass/_sections.sass */
 #cmp .faq div {
   margin: 0 0 0.5em 0;
 }
-/* line 247, sass/_sections.sass */
+/* line 255, sass/_sections.sass */
 #cmp .faq .btn {
   margin: 1em auto 0;
 }
-/* line 250, sass/_sections.sass */
+/* line 258, sass/_sections.sass */
 #cmp .faq .back-to-top {
   text-align: right;
   padding: 1em 0 1em;
 }
-/* line 254, sass/_sections.sass */
+/* line 262, sass/_sections.sass */
 #cmp .faq .top-btn {
   font-weight: 400;
   color: #c6c7c8;
@@ -909,7 +925,7 @@ header[role="banner"] {
   background-repeat: no-repeat;
   background-position: 0% 40%;
 }
-/* line 265, sass/_sections.sass */
+/* line 273, sass/_sections.sass */
 #cmp #birthday-report-back {
   background: white;
   padding: 2em 0px;
@@ -922,11 +938,11 @@ header[role="banner"] {
   -o-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 273, sass/_sections.sass */
+/* line 281, sass/_sections.sass */
 #cmp #birthday-report-back .field-name-field-mandrill-key {
   display: none;
 }
-/* line 276, sass/_sections.sass */
+/* line 284, sass/_sections.sass */
 #cmp #birthday-report-back #edit-submit {
   font-size: 18px;
   font-weight: 500;
@@ -936,7 +952,7 @@ header[role="banner"] {
   width: 100px;
   margin: 1em 0 0 0;
 }
-/* line 285, sass/_sections.sass */
+/* line 293, sass/_sections.sass */
 #cmp #birthday-report-back #edit-submitted-field-webform-pictures-und-0-upload-button,
 #cmp #birthday-report-back #edit-submitted-field-webform-pictures-und-1-upload-button {
   color: #555555 !important;
